  - AllFusionHarvest
  - Sametime
  - StarTeam
  - Yahoo

Documentation
======================
* Composite builder does not support Pause builder child element (CC-812). Reported by John Camerin
* Add documentation on "Building Plugins That Need External Libraries".

build loop
======================

Darcs
---------------------
* Fix Darcs support (CC-847). Patch by Marc Fontaine.

DateFormat
---------------------
* The ability to set the date format in the build loop has been removed. This fixes the issue where setting the date format on one project would affect all of them (CC-355), would cause build status messages to not display in the reporting application (CC-797). Build loop now uses ISO 8601 format for storing date stamp information (CC-353) which is a change from the previous default format.

ScriptRunner
---------------------
* Change ScriptRunner/AntBuilder to only create antBuilderOutput.log when needed. Reported by Jared Tafralian.

TFS
---------------------
* Add attributes to support connections profiles and non-default encodings (CC-853). Patch by Dmitry Malenok.

UCM
---------------------
* Logging contributor activities in UCM Modificationset throws a NullPointerException on Linux Platform (CC-815). Path by Patrick Jenner.


CruiseControl Release Notes - 2.7.3

general
======================
* Change cruisecontrol.sh (main, binaryrelease, distcc) script to use more generic shebang (that also works on FreeBSD) (CC-789). Patch by Ivan "Rambius" Ivanov
* Update saxon to 9.0.0.6
* Update bundled cc-config to version 1.8.

build loop
======================

ClearCase
---------------------
* Change cleartool command line to always use date in US format, ignoring the language set in the operating System (CC-818). Patch by Jean-Philippe HAUTIN.

ClearCaseViewstrapper
---------------------
* ClearCaseViewStrapper would cancel the build if the view was already mounted (CC-757).  Reported by Gerrit Brehmer. Patch by Glenn Opdycke-Hansen.

CMSynergy